Fixed name underline gradient on safari and mobile devices

--- a/_sass/port-theme/_header.scss
+++ b/_sass/port-theme/_header.scss
@@ -35,21 +35,6 @@
             width: 100%;
             height: 100%;
         }
-        // .headshot {
-        //     background: url(images/Catania_headshot_sq_bw.png) bottom right no-repeat;
-        //     position: absolute;
-        //     z-index: -1;
-        //     width: 100%;
-        //     height: 100%;
-        //     background-size: 30rem; // @include media-breakpoint-up(lg) {
-        //     //     background-size: 35rem;
-        //     // }
-        //     @include media-breakpoint-up(xl) {
-        //         background-size: 40rem;
-        //     }
-        //     -webkit-filter: drop-shadow(0 3px 3px rgba(0, 0, 0, .3));
-        //     filter: drop-shadow(0 3px 3px rgba(0, 0, 0, .3));
-        // }
         #intro-content {
             position: relative;
             text-align: center;
@@ -99,7 +84,13 @@
                 margin-bottom: 1rem;
                 padding-bottom: .25rem;
                 text-decoration: none;
-                background-image: linear-gradient(120deg, transparent 0%, #5FABB0 15%, #A4D391 75%, transparent 100%);
+                background-image: linear-gradient(
+                    to right,
+                    rgba(164,211,145,0),
+                    $green 15%,
+                    $teal 75%,
+                    rgba(95,171,176,0)
+                  );
                 background-position: bottom left;
                 background-repeat: no-repeat;
                 background-size: 100% .3rem;
